# Tetris

./: .gitignore  README.md  config  config.txt  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  settings.toml
.github/workflows/: lint.yml  release.yml  test.yml  tests.yml  typst.yml
src/ai/: __init__.py  ai.py  config.py  evaluation.py  evaluations.py  fitness.py  io.py  log.py  move.py  score.py  training.py  visualize.py
src/ai/fitness/: __init__.py  bumpiness.py  calculate.py  fitness.py  holes.py  peaks.py  transitions.py  wells.py
src/ai/heuristics/: __init__.py  bumpiness.py  height.py  holes.py  lines.py  peaks.py
src/ai/moves/: calculate.py  height.py  holes.py  lines.py
src/game/: __init__.py  block.py  game.py  log.py  main.py  menu.py  preview.py  score.py  tetromino.py  timer.py
src/game/screens/: __init__.py  base.py  base_button.py  button.py  game.py  main.py  menu.py  menu_button.py  pause.py  preview.py  score.py  settings.py  tetris.py
src/game/sprites/: __init__.py  block.py  tetromino.py
src/utils/: __init__.py  config.py  direction.py  enum.py  events.py  figure.py  log.py  path.py  position.py  settings.py  size.py  tuples.py  weights.py
src/utils/colors/: __init__.py
src/utils/colors/tokyonight/: __init__.py  base.py  day.py  moon.py  night.py  storm.py
tests/: test_blank.py
tests/ai/: test_fitness.py  test_heuristics.py  test_moves.py
tetris/: __main__.py
typst/: main.typ
